--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl
-#Thu Feb 19 23:49:21 CET 2015
-apiUrl=https\://akg-backend.heropuapp.com
+#Fri Feb 20 21:31:16 CET 2015
+apiUrl=http\://localhost\:9000
