--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl
-#Fri Feb 20 21:31:16 CET 2015
-apiUrl=http\://localhost\:9000
+#Wed Mar 11 00:43:49 CET 2015
+apiUrl=https\://akg-backend.herokuapp.com
