--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl 
-#Sun Mar 29 20:53:07 CEST 2015
-apiUrl=https\://akg-backend.herokuapp.com
+#Thu Apr 02 13:37:16 CEST 2015
+apiUrl=http\://localhost\:9000
