--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl 
-#Thu Apr 02 16:52:40 CEST 2015
-apiUrl=https\://akg-backend.herokuapp.com
+#Sat Apr 04 18:44:20 CEST 2015
+apiUrl=http\://localhost\:9000
