--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl 
-#Sat Apr 04 18:44:20 CEST 2015
-apiUrl=https://akg-backend.herokuapp.com
+#Tue Jun 09 23:50:31 CEST 2015
+apiUrl=https\://akg-backend.herokuapp.com
