--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 #Update apiUrl 
-#Tue Jun 09 23:50:31 CEST 2015
-apiUrl=https\://akg-backend.herokuapp.com
+#Tue Jun 16 00:36:51 CEST 2015
+apiUrl=http\://localhost\:9000
